--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/list">Liste</a>
+    <a routerLink="/creation">Erstellung</a>
+    <a routerLink="/Editor">Editor</a>
+  </nav>
 <router-outlet></router-outlet>
