Enable Navigation in Electron

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/list">Liste</a>
     <a routerLink="/creation">Erstellung</a>
-    <a routerLink="/Editor">Editor</a>
+    <a routerLink="/editor">Editor</a>
   </nav>
 <router-outlet></router-outlet>
