--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  <a (click)="setActive(index)" *ngFor="let hero of heroes; let i = index" class="col-1-4"
+  <a (click)="setActive(i)" *ngFor="let hero of heroes; let i = index" class="col-1-4"
       routerLink="/editor">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
