Add chart viewer stub

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
     <a routerLink="/list">Liste</a>
     <a routerLink="/creation">Erstellung</a>
     <a routerLink="/editor">Editor</a>
+    <a routerLink="/chart">Chart Viewer</a>
+    
   </nav>
 <router-outlet></router-outlet>
