--- a/src/app/hero-creation/creation/creation.component.html
+++ b/src/app/hero-creation/creation/creation.component.html
@@ -9,3 +9,17 @@
 </div>
 
 <button (click)="createHero()" class="btn btn-primary">Create new Hero</button>
+
+<div>
+  <div style="display: block">
+    <canvas baseChart
+            [datasets]="barChartData"
+            [labels]="barChartLabels"
+            [options]="barChartOptions"
+            [legend]="barChartLegend"
+            [chartType]="barChartType"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)"></canvas>
+  </div>
+  <button (click)="randomize()">Update</button>
+</div>
